# eb-deploy-base

./: .gitignore  .gitmodules  Dockerfile  Dockerfile.base  Dockerfile.ci  Dockerfile.linux  Dockerfile.local  README.md  ci.py  command.py  container.py  deploy.py  deploy2.py  deploy_bak.py  deploy_poetry.py  deploy_requirements.py  install.py  pyproject.toml  secrets.py
.config/: nginx.app.conf  nginx.default.conf  nginx.fitcha.conf  nginx.inaina.conf  nginx.mashup.conf  supervisord.conf
.config/django-quill/: gunicorn.py  nginx.django-quill.conf
.config/fc-headhunting/: gunicorn.py  nginx.fc-headhunting.conf
.config/fitcha/: gunicorn.py
.config/inaina/: gunicorn.py
.config/lhy/: gunicorn.py  nginx.lhy.conf
.config/mashup/: gunicorn.py
.config/study-watson/: gunicorn.py  nginx.study-watson.conf
.config/washble/: gunicorn.py  nginx.washble.conf
.elasticbeanstalk/: config.yml
.requirements/: base.txt
app/config/: urls.py
app/config/settings/: base.py  dev.py  production.py
app/config/templates/: base.html  index.html
