[tool.poetry]
name = "eb-deploy-base"
version = "0.1.0"
description = ""
authors = ["lhy <dev@lhy.kr>"]

[tool.poetry.dependencies]
python = "^3.8"
django = "^3.0.8"
requests = "^2.24.0"
boto3 = "^1.14.28"
PyInquirer = "^1.0.3"
celery = "^4.4.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
